# seezar-challenge

./: .env.example  .gitignore  README.md  dbos-config.yaml  dbos_client.py  docker-compose.yml  init.sql  litellm_config.yaml  main.py  pyproject.toml  rxconfig.py
agent/: agent.py
seezar_admin/: seezar_admin.py
seezar_operator/: operator_workflows_mcp.py  seezar_operator.py  totp_mail_listener.py
